Sql Script Update

--- a/Selpo/appsettings.json
+++ b/Selpo/appsettings.json
@@ -14,3 +14,114 @@
 //NADAP\\SQLEXPRESS
 //NADAP\NADAP
 //"Server=NADAP\\NADAP; Database=Selpo; Trusted_Connection=True; TrustServerCertificate=True;"
+
+
+//USE [Selpo]
+//GO
+///****** Object:  Table [dbo].[Company]    Script Date: 31-01-2025 00:17:22 ******/
+//SET ANSI_NULLS ON
+//GO
+//SET QUOTED_IDENTIFIER ON
+//GO
+//CREATE TABLE [dbo].[Company](
+//	[CompanyId] [int] IDENTITY(1,1) NOT NULL,
+//	[CompanyName] [nvarchar](255) NOT NULL,
+//	[CompanyAddress] [nvarchar](500) NOT NULL,
+//	[CompanyMobile] [nvarchar](20) NOT NULL,
+//PRIMARY KEY CLUSTERED 
+//(
+//	[CompanyId] ASC
+//)WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
+//) ON [PRIMARY]
+//GO
+///****** Object:  Table [dbo].[InvoicePrint]    Script Date: 31-01-2025 00:17:22 ******/
+//SET ANSI_NULLS ON
+//GO
+//SET QUOTED_IDENTIFIER ON
+//GO
+//CREATE TABLE [dbo].[InvoicePrint](
+//	[InvoiceId] [int] IDENTITY(1,1) NOT NULL,
+//	[TransactionDateTime] [datetime] NOT NULL,
+//	[SenderName] [nvarchar](255) NOT NULL,
+//	[Mobile] [nvarchar](20) NOT NULL,
+//	[RecipientName] [nvarchar](255) NOT NULL,
+//	[Bank] [nvarchar](255) NOT NULL,
+//	[AccountNumber] [nvarchar](50) NOT NULL,
+//	[IFSC] [nvarchar](50) NOT NULL,
+//	[Remark] [nvarchar](500) NULL,
+//	[Amount] [decimal](18, 2) NOT NULL,
+//	[Charges] [decimal](18, 2) NOT NULL,
+//	[AmountWithCharges] [decimal](18, 2) NOT NULL,
+//	[CompanyName] [nvarchar](255) NOT NULL,
+//	[CompanyAddress] [nvarchar](500) NOT NULL,
+//	[CompanyMobile] [nvarchar](20) NOT NULL,
+//PRIMARY KEY CLUSTERED 
+//(
+//	[InvoiceId] ASC
+//)WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
+//) ON [PRIMARY]
+//GO
+///****** Object:  Table [dbo].[Receipt]    Script Date: 31-01-2025 00:17:22 ******/
+//SET ANSI_NULLS ON
+//GO
+//SET QUOTED_IDENTIFIER ON
+//GO
+//CREATE TABLE [dbo].[Receipt](
+//	[ReceiptId] [int] IDENTITY(1,1) NOT NULL,
+//	[SenderId] [int] NULL,
+//	[Bank] [nvarchar](255) NOT NULL,
+//	[AccountNumber] [nvarchar](50) NOT NULL,
+//	[RecipientName] [nvarchar](255) NOT NULL,
+//	[IFSC] [nvarchar](50) NOT NULL,
+//	[Remark] [nvarchar](500) NULL,
+//PRIMARY KEY CLUSTERED 
+//(
+//	[ReceiptId] ASC
+//)WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
+//) ON [PRIMARY]
+//GO
+///****** Object:  Table [dbo].[Sender]    Script Date: 31-01-2025 00:17:22 ******/
+//SET ANSI_NULLS ON
+//GO
+//SET QUOTED_IDENTIFIER ON
+//GO
+//CREATE TABLE [dbo].[Sender](
+//	[SenderId] [int] IDENTITY(1,1) NOT NULL,
+//	[Mobile] [nvarchar](20) NOT NULL,
+//	[Name] [nvarchar](255) NOT NULL,
+//PRIMARY KEY CLUSTERED 
+//(
+//	[SenderId] ASC
+//)WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
+//) ON [PRIMARY]
+//GO
+///****** Object:  Table [dbo].[TransactionDetails]    Script Date: 31-01-2025 00:17:22 ******/
+//SET ANSI_NULLS ON
+//GO
+//SET QUOTED_IDENTIFIER ON
+//GO
+//CREATE TABLE [dbo].[TransactionDetails](
+//	[TransactionId] [int] IDENTITY(1,1) NOT NULL,
+//	[ReceiptId] [int] NULL,
+//	[InvoiceId] [int] NULL,
+//	[TransactionDateTime] [datetime] NOT NULL,
+//	[Amount] [decimal](18, 2) NOT NULL,
+//	[Charges] [decimal](18, 2) NOT NULL,
+//	[AmountWithCharges] [decimal](18, 2) NOT NULL,
+//PRIMARY KEY CLUSTERED 
+//(
+//	[TransactionId] ASC
+//)WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
+//) ON [PRIMARY]
+//GO
+//ALTER TABLE [dbo].[Receipt]  WITH CHECK ADD FOREIGN KEY([SenderId])
+//REFERENCES [dbo].[Sender] ([SenderId])
+//GO
+//ALTER TABLE [dbo].[TransactionDetails]  WITH CHECK ADD FOREIGN KEY([ReceiptId])
+//REFERENCES [dbo].[Receipt] ([ReceiptId])
+//GO
+//ALTER TABLE [dbo].[TransactionDetails]  WITH CHECK ADD  CONSTRAINT [FK_Transaction_Invoice] FOREIGN KEY([InvoiceId])
+//REFERENCES [dbo].[InvoicePrint] ([InvoiceId])
+//GO
+//ALTER TABLE [dbo].[TransactionDetails] CHECK CONSTRAINT [FK_Transaction_Invoice]
+//GO
